force-app/main/default/objects/QuotePeriod__c/QuotePeriod__c.object-meta.xml
<CustomObject>
    <label>Quote Period</label>
    <nameField>
        <label>Quote Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>