force-app/main/default/objects/QuotePeriod__c/fields/ProjectPhaseId__c.field-meta.xml
<CustomField>
    <fullName>ProjectPhaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Phase</label>
    <referenceTo>ProjectPhase__c</referenceTo>
    <relationshipLabel>Quote Periods</relationshipLabel>
    <relationshipName>QuotePeriods</relationshipName>
    <type>Lookup</type>
</CustomField>