force-app/main/default/objects/QuotePeriod__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote Periods</relationshipLabel>
    <relationshipName>QuotePeriods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>