force-app/main/default/objects/QuotePeriod__c/fields/QuotePeriodGroupId__c.field-meta.xml
<CustomField>
    <fullName>QuotePeriodGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Period Group</label>
    <referenceTo>QuotePeriodGroup__c</referenceTo>
    <relationshipLabel>Quote Periods</relationshipLabel>
    <relationshipName>QuotePeriods</relationshipName>
    <type>Lookup</type>
</CustomField>